map now no longer zoom in at touch on small screens. and we set the width to max over there...

--- a/less/layout.less
+++ b/less/layout.less
@@ -65,6 +65,7 @@ main:extend(blockpadding) {
 .map {
   &>div{
     height: @mapHeight;
+    width: @mapWidth;
   }
   height: @mapHeight;
   .leaflet-top, .leaflet-bottom {
